cabal-version:       2.4

name:                ch-hs-imports
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Handré Stolp
maintainer:          HanStolpo@gmail.com
extra-source-files:  CHANGELOG.md

executable ch-hs-imports
  main-is:             Main.hs
  build-depends:
    async                ^>= 2.2.0,
    base                 ^>= 4.12.0.0,
    containers           ^>= 0.6.0.1,
    directory            ^>= 1.3.3.0,
    dlist                ^>= 0.8,
    filepath             ^>= 1.4.2.1,
    megaparsec           ^>= 7.0.5,
    optparse-applicative  >= 0.14 && < 0.16,
    streaming            ^>= 0.2.2.0,
    streaming-bytestring ^>= 0.1.6,
    streaming-process    ^>= 0.1.0.0,
    text                 ^>= 1.2.3.1,
    transformers         ^>= 0.5.6.2,
    unliftio-core        ^>= 0.1.2.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -fwarn-incomplete-uni-patterns -threaded -O
