cabal-version:       2.4

name:                ch-hs-imports
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Handré Stolp
maintainer:          HanStolpo@gmail.com
extra-source-files:  CHANGELOG.md

executable ch-hs-imports
  main-is:             Main.hs
  build-depends :
   abstract-par         ^>= 0.3.3,
   base                 ^>= 4.12.0.0,
   containers           ^>= 0.6.0.1,
   deepseq              ^>= 1.4.4.0,
   directory            ^>= 1.3.3.0,
   dlist                ^>= 0.8,
   filepath             ^>= 1.4.2.1,
   megaparsec           ^>= 7.0.5,
   monad-par            ^>= 0.3.4.8,
   monad-par-extras     ^>= 0.3.3,
   monoidal-containers  ^>= 0.4.0.0,
   mtl                  ^>= 2.2.2,
   nonempty-containers  ^>= 0.3.1.0,
   optparse-applicative  >= 0.14 && < 0.16,
   process              ^>= 1.6.5.0,
   text                 ^>= 1.2.3.1,
   transformers         ^>= 0.5.6.2

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
      -O2
      -threaded
      -rtsopts
      -with-rtsopts=-N
      -Werror
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wpartial-fields
      -Wredundant-constraints
