cabal-version:       2.4

name:                ch-hs-imports
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Handré Stolp
maintainer:          HanStolpo@gmail.com
extra-source-files:  CHANGELOG.md

executable ch-hs-imports
  main-is:             Main.hs
  build-depends :
   abstract-par,
   base,
   containers,
   deepseq,
   directory,
   dlist,
   filepath,
   megaparsec,
   monad-par,
   monad-par-extras,
   monoidal-containers,
   mtl,
   nonempty-containers,
   optparse-applicative,
   process,
   text,
   transformers

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
      -O2
      -threaded
      -rtsopts
      -with-rtsopts=-N
      -Werror
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wpartial-fields
      -Wredundant-constraints
